# korg_minilogue

./: .gitignore  CMakeLists.txt
include/minilogue/: EnvelopeGenerator.h  Minilogue.h  Mixer.h  NoiseGenerator.h  VCO.h  Voice.h
include/plugin/: PluginEditor.h  PluginEditor.hpp  PluginProcessor.h  PluginProcessor.hpp
minilogue_lib/: CMakeLists.txt
minilogue_lib/include/: Minilogue.h  VCO.h  Voice.h
minilogue_lib/src/: Minilogue.cpp  VCO.cpp  Voice.cpp
src/minilogue/: EnvelopeGenerator.cpp  Minilogue.cpp  Mixer.cpp  NoiseGenerator.cpp  VCO.cpp  Voice.cpp
src/plugin/: PluginEditor.cpp  PluginProcessor.cpp
